--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Education Website</title>
+    <title>Frosty - Home</title>
     <!------ Font Awesome ------>
     <link
       rel="stylesheet"
@@ -38,7 +38,7 @@
             <a href="https://frosty.tk/discord"> Discord </a>
           </li>
           <li>
-            <a href="#courses"> Important Links </a>
+            <a href="#links">Links </a>
           </li>
         </ul>
       </nav>
@@ -56,12 +56,12 @@
         </div>
       </div>
       <div class="hero-img">
-        <img src="hero-image.svg" />
+        <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
       </div>
     </section>
     
     <!------ Section: Courses ------>
-    <section class="courses" id="courses">
+    <section class="courses" id="links">
       <h2>Important Links</h2>
       <p class="section-desc">
         Some Important Links<br>
