--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class="hero-content">
         <h1>About Frosty SMP</h1>
         <p>
-          Frostysmp, also written as FrostySMP, is a whitelisted minecraft serer started in August 2021 by VanshGamer. They have had a total of two vanilla worlds and they are currently in their second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty servers are Minecraft YouTubers who have been recognised by other Frosty Member  and have been invited to join.        </p>
+          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty servers are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
         <div class="btn-container">
           <button class="primary-btn btn">Discord</button>
           <button class="secondary-btn btn">Downloads</button>
@@ -62,15 +62,15 @@
     
     <!------ Section: Courses ------>
     <section class="courses" id="links">
-      <h2>Important Links</h2>
+      <h2>Links</h2>
       <p class="section-desc">
         Some Important Links<br>
-  You Must nedd
+  You Must needed
       </p>
       <div class="row">
         <div class="column">
           <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
-          <h3>Our Players & mods</h3>
+          <h3>Our Players & Staff</h3>
           <p>
     Our Official Staffs & members Channel and Discord Server</p>
           <div class="courses-btn">
@@ -89,9 +89,9 @@
         </div>
         <div class="column">
           <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
-          <h3>BUILDS OF OUR SMP MEMBERS</h3>
+          <h3>Register Yourself</h3>
           <p>
-            Official Builds by our SMP players
+            Register for our upcoming session
           </p>
           <div class="courses-btn">
             <button class="btn secondary-btn">Learn More</button>
@@ -106,14 +106,14 @@
       <div class="row footer-about">
   
         <div class="social-links">
-          <a href="#">
+          <a href="https://www.instagram.com/frosty_smp/">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/frosty_smp?t=dw9wgouTFkIJen_YhVRJrQ&s=09">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
-            <i class="fab fa-facebook-f"></i>
+          <a href="https://discord.gg/VdHSnpqTRG">
+            <i class="fab fa-discord"></i>
           </a>
         </div>
       </div>
