--- a/players/index.html
+++ b/players/index.html
@@ -1,1 +1,136 @@
-Xd
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frosty - Players</title>
+    <!------ Font Awesome ------>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <!------ Google Fonts ------>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!------ Stylesheet ------>
+    <link rel="stylesheet" href="style.css" />
+    <!------ Queries ------>
+    <link rel="stylesheet" href="queries.css" />
+  </head>
+  <body>
+    <!------ Scroll To Top Button ------>
+    <button id="scroll-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+    <!------ Header ------>
+        <header>
+      <nav>
+        <a href="#home" id="logo">Frosty SMP</a>
+        <i class="fas fa-bars" id="ham-menu"></i>
+        <ul id="nav-bar">
+          <li>
+            <a href="https://frosty.tk">Home </a>
+          </li>
+          <li>
+            <a href="https://frosty.tk/discord"> Discord </a>
+          </li>
+          <li>
+            <a href="https://frosty.tk/home#links">Links </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!------ Section: Hero ------>
+    <section class="hero" id="home">
+
+      <div class="hero-content">
+        <h1>About Frosty SMP</h1>
+        <p>
+          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty servers are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.      </p>
+        <div class="btn-container">
+          <button class="primary-btn btn">Discord</button>
+          <button class="secondary-btn btn">Downloads</button>
+        </div>
+      </div>
+      <div class="hero-img">
+        <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
+      </div>
+    </section>
+
+    <!------ Section: Testimonial ------>
+    <section class="testimonial" id="testimonial">
+      <h2>Staff Members</h2>
+      <p class="section-desc">
+        
+      </p>
+      <div class="row">
+        <div class="column">
+          <div class="testimonial-image">
+            <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
+          </div>
+                 <h3>Vansh</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est alias
+            eligendi quia explicabo dolorem dignissimos nisi consequatur nobis
+            quaerat quas iure nostrum laudantium similique ea iste sequi tempore
+            natus, repellat quae deleniti. Veritatis sit deserunt rerum cum
+            consectetur voluptate nisi.
+          </p>
+   
+        </div>
+        <div class="column">
+          <div class="testimonial-image">
+            <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
+          </div>
+                  <h3>Darshi</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis
+            exercitationem, deleniti illo modi voluptatibus, voluptatem totam ea
+            consequuntur sint, sit voluptas laboriosam? Aperiam, iure sequi sunt
+            assumenda molestiae recusandae, harum id aliquam ipsam eveniet
+            ratione cupiditate libero quasi nobis nulla.
+          </p>
+  
+        </div>
+      </div>
+      <br>
+      <h2>Players<h2>
+    </section>
+    
+    <!------ Footer ------>
+    <footer>
+      <div class="row footer-about">
+
+        <div class="social-links">
+          <a href="/instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="/twitter">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="/discord">
+            <i class="fab fa-discord"></i>
+          </a>
+        </div>
+      </div>
+      <div class="row footer-contact">
+        <div class="column">
+          <h4>Phone No</h4>
+          <p>+12 123456</p>
+        </div>
+        <div class="column">
+          <h4>Email</h4>
+          <p>frosty</p>
+        </div>
+      </div>
+      <p class="footer-copyright">
+        Copyright &copy; 2021 Frosty. All rights reserved.
+      </p>
+    </footer>
+    <!------ Script ------>
+    <script src="script.js"></script>
+  </body>
+</html>
