--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
       <div class="hero-content">
         <h1>About Frosty SMP</h1>
         <p>
-          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty servers are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
+          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
         <div class="btn-container">
-          <button class="primary-btn btn">Discord</button>
-          <button class="secondary-btn btn">Downloads</button>
+         <a href="/discord" > <button class="primary-btn btn">Discord</button><a>
+        <a href="/download">  <button class="secondary-btn btn">Downloads</button><a>
         </div>
       </div>
       <div class="hero-img">
@@ -73,8 +73,8 @@
           <h3>Our Players & Staff</h3>
           <p>
     Our Official Staffs & members Channel and Discord Server</p>
-          <div class="courses-btn">
-            <button class="btn secondary-btn">Learn More</button>
+       <div class="courses-btn">
+            <a href="/players">    <button class="btn secondary-btn">Go to Players Page</button></a>
           </div>
         </div>
         <div class="column">
@@ -84,7 +84,7 @@
             You Can Download our Official Worlds from here
           </p>
           <div class="courses-btn">
-            <button class="btn secondary-btn">Learn More</button>
+          <a href="/download">      <button class="btn secondary-btn">Go to Download Page</button></a>
           </div>
         </div>
         <div class="column">
@@ -94,7 +94,7 @@
             Register for our upcoming session
           </p>
           <div class="courses-btn">
-            <button class="btn secondary-btn">Learn More</button>
+          <a href="/register">      <button class="btn secondary-btn">Register Here</button></a>
           </div>
         </div>
       </div>
@@ -128,7 +128,7 @@
         </div>
       </div>
       <p class="footer-copyright">
-        Copyright &copy; 2021 frosy. All rights reserved.
+        Copyright &copy; 2021 frosty. All rights reserved.
       </p>
     </footer>
     <!------ Script ------>
