--- a/discord/index.html
+++ b/discord/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#4a86e8">
 
     <meta property="og:title" content="Frosty SMP" /><meta property="og:image" content="https://cdn.discordapp.com/icons/878252274147815496/c2fb3577e209f274a0bb09ca4029cdc1.png?size=128" /><meta property="og:description" content="­
-            Join Frosty Server" /><meta property="og:site_name" content="Powered by DN Network">
+            Join Frosty Server" /><meta property="og:site_name" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     	<meta http-equiv="refresh" content="0; url=https://discord.gg/c95D9eMHSx">
 
