--- a/assist/index.html
+++ b/assist/index.html
@@ -1,1 +1,128 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Frosty - Home</title>
+    <!------ Font Awesome ------>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <!------ Google Fonts ------>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!------ Stylesheet ------>
+    <link rel="stylesheet" href="style.css" />
+    <!------ Queries ------>
+    <link rel="stylesheet" href="queries.css" />
+  </head>
+  <body>
+    <!------ Scroll To Top Button ------>
+    <button id="scroll-top">
+      <i class="fas fa-arrow-up"></i>
+    </button>
+    <!------ Header ------>
+    <header>
+      <nav>
+        <a href="#home" id="logo">Frosty SMP</a>
+        <i class="fas fa-bars" id="ham-menu"></i>
+        <ul id="nav-bar">
+          <li>
+            <a href="#home">Home </a>
+          </li>
+          <li>
+            <a href="https://frosty.tk/discord"> Discord </a>
+          </li>
+          <li>
+            <a href="#links">Links </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!------ Section: Hero ------>
+    <section class="hero" id="home">
 
+      <div class="hero-content">
+        <h1>About Frosty SMP</h1>
+        <p>
+          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
+        <div class="btn-container">
+         <a href="/discord" > <button class="primary-btn btn">Discord</button><a>
+        <a href="/download">  <button class="secondary-btn btn">Downloads</button><a>
+        </div>
+      </div>
+      <div class="hero-img">
+        <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
+      </div>
+    </section>
+    
+    <!------ Section: Courses ------>
+    <section class="courses" id="links">
+      <h2>Links</h2>
+      <p class="section-desc">
+        Some Important Links<br>
+  You Must needed
+      </p>
+      <div class="row">
+        <div class="column">
+          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
+          <h3>Our Players & Staff</h3>
+          <p>
+    Our Official Staffs & members Channel and Discord Server</p>
+       <div class="courses-btn">
+            <a href="/players">    <button class="btn secondary-btn">Go to Players Page</button></a>
+          </div>
+        </div>
+        <div class="column">
+          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
+          <h3>Download</h3>
+          <p>
+            You Can Download our Official Worlds from here
+          </p>
+          <div class="courses-btn">
+          <a href="/download">      <button class="btn secondary-btn">Go to Download Page</button></a>
+          </div>
+        </div>
+        <div class="column">
+          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
+          <h3>Register Yourself</h3>
+          <p>
+            Register for our upcoming session
+          </p>
+          <div class="courses-btn">
+          <a href="/register">      <button class="btn secondary-btn">Register Here</button></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <!------ Footer ------>
+    <footer>
+      <div class="row footer-about">
+  
+        <div class="social-links">
+          <a href="https://www.instagram.com/frosty_smp/">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://twitter.com/frosty_smp?t=dw9wgouTFkIJen_YhVRJrQ&s=09">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://discord.gg/VdHSnpqTRG">
+            <i class="fab fa-discord"></i>
+          </a>
+        </div>
+      </div>
+ 
+      <p class="footer-copyright">
+        Copyright &copy; 2021 frosty. All rights reserved.
+      </p>
+    </footer>
+    <!------ Script ------>
+    <script src="script.js"></script>
+  </body>
+</html>
