--- a/index.html
+++ b/index.html
@@ -60,7 +60,18 @@
         <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
       </div>
     </section>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2438376395642394"
+     crossorigin="anonymous"></script>
+<!-- Frosty ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2438376395642394"
+     data-ad-slot="9308907052"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!------ Section: Courses ------>
     <section class="courses" id="links">
       <h2>Links</h2>
