--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <div class="hero-content">
         <h1>About Frosty SMP</h1>
         <p>
-          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
+          rosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
         <div class="btn-container">
          <a href="/discord" > <button class="primary-btn btn">Discord</button><a>
         <a href="/download">  <button class="secondary-btn btn">Downloads</button><a>
