--- a/assist/index.html
+++ b/assist/index.html
@@ -59,7 +59,7 @@
         <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
       </div>
     </section>
-    
+    <script src="//ap.lijit.com/www/delivery/fpi.js?z=993520&width=320&height=50"></script> 
     <!------ Section: Courses ------>
     <section class="courses" id="links">
       <h2>Links</h2>
