--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<script data-ad-client="ca-pub-2438376395642394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  	<script data-ad-client="ca-pub-2438376395642394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frosty - Home</title>
     <!------ Font Awesome ------>
@@ -41,6 +42,9 @@
           <li>
             <a href="#links">Links </a>
           </li>
+          <li>
+            <a href="https://frosty.tk/register">Register </a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -50,28 +54,17 @@
       <div class="hero-content">
         <h1>About Frosty SMP</h1>
         <p>
-          rosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
+          Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021 by Vansh Gamer. We are currently on second vanilla season. The server is currently administered by Darshi, who was one of the earliest member of server. The members of the Frosty server are Minecraft YouTubers who have been recognised by other as Frosty Members and have been invited to join.    </p>
         <div class="btn-container">
          <a href="/discord" > <button class="primary-btn btn">Discord</button><a>
         <a href="/download">  <button class="secondary-btn btn">Downloads</button><a>
         </div>
       </div>
       <div class="hero-img">
-        <img src="https://media.discordapp.net/attachments/878297386282258483/918125295654035496/1638967915660.png" />
+        <img src="https://media.discordapp.net/attachments/898223879040958494/928677404786966579/1641484331854.png" />
       </div>
     </section>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2438376395642394"
-     crossorigin="anonymous"></script>
-<!-- Frosty ad -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-2438376395642394"
-     data-ad-slot="9308907052"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+    
     <!------ Section: Courses ------>
     <section class="courses" id="links">
       <h2>Links</h2>
@@ -129,16 +122,7 @@
           </a>
         </div>
       </div>
-      <div class="row footer-contact">
-        <div class="column">
-          <h4>Phone No</h4>
-          <p>+12 123456</p>
-        </div>
-        <div class="column">
-          <h4>Email</h4>
-          <p>frosty.tk</p>
-        </div>
-      </div>
+ 
       <p class="footer-copyright">
         Copyright &copy; 2021 frosty. All rights reserved.
       </p>
@@ -147,3 +131,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
