--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   	<script data-ad-client="ca-pub-2438376395642394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frosty - Home</title>
+    <title>Frosty - Register</title>
     <!------ Font Awesome ------>
     <link
       rel="stylesheet"
@@ -42,9 +42,6 @@
           <li>
             <a href="#links">Links </a>
           </li>
-          <li>
-            <a href="https://frosty.tk/register">Register </a>
-          </li>
         </ul>
       </nav>
     </header>
@@ -65,46 +62,7 @@
       </div>
     </section>
     
-    <!------ Section: Courses ------>
-    <section class="courses" id="links">
-      <h2>Links</h2>
-      <p class="section-desc">
-        Some Important Links<br>
-  You Must needed
-      </p>
-      <div class="row">
-        <div class="column">
-          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
-          <h3>Our Players & Staff</h3>
-          <p>
-    Our Official Staffs & members Channel and Discord Server</p>
-       <div class="courses-btn">
-            <a href="/players">    <button class="btn secondary-btn">Go to Players Page</button></a>
-          </div>
-        </div>
-        <div class="column">
-          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
-          <h3>Download</h3>
-          <p>
-            You Can Download our Official Worlds from here
-          </p>
-          <div class="courses-btn">
-          <a href="/download">      <button class="btn secondary-btn">Go to Download Page</button></a>
-          </div>
-        </div>
-        <div class="column">
-          <img src="https://media.discordapp.net/attachments/853622480535158826/917627576376254484/1637953612635frosty-logo.png" />
-          <h3>Register Yourself</h3>
-          <p>
-            Register for our upcoming session
-          </p>
-          <div class="courses-btn">
-          <a href="/register">      <button class="btn secondary-btn">Register Here</button></a>
-          </div>
-        </div>
-      </div>
-    </section>
-
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="15" marginwidth="15">Loading…</iframe>
 
     <!------ Footer ------>
     <footer>
@@ -131,4 +89,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
