--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
       </div>
     </section>
     
-           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="15" marginwidth="15">Loading…</iframe>
-<br><br><br><br><br><br><br><br>
-    <!------ Footer ------><br><br><br><br><br><br><br><br>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="150" marginwidth="15">Loading…</iframe>
+
+    <!------ Footer ------>
     <footer>
       <div class="row footer-about">
   
