--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="150" marginwidth="15">Loading…</iframe>
 
     </section>
-    <script type="text/javascript">
+ <center>   <script type="text/javascript">
 	atOptions = {
 		'key' : '63d2d6dc8516c0692b599589bae80ab6',
 		'format' : 'iframe',
@@ -94,6 +94,19 @@
 	};
 	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplaycontent.com/f4b436c71533e57138e2dc210493627e/invoke.js"></scr' + 'ipt>');
 </script>
+
+
+
+
+
+
+
+
+
+
+<center>
+
+
     <!------ Footer ------>
     <footer>
       <div class="row footer-about">
