--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
       <div class="hero-img">
         <img src="https://media.discordapp.net/attachments/898223879040958494/928677404786966579/1641484331854.png" />
       </div>
+<div height="100px">
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="150" marginwidth="15">Loading…</iframe>
-
+</div>
     </section>
  <center>   <script type="text/javascript">
 	atOptions = {
