--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <i class="fas fa-bars" id="ham-menu"></i>
         <ul id="nav-bar">
           <li>
-            <a style="color:blue" href="#home">Home </a>
+            <a style="color:gray" href="#home">Home </a>
           </li>
           <li>
             <a href="https://frosty.tk/discord"> Discord </a>
