--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
   	<script data-ad-client="ca-pub-2438376395642394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frosty - Register</title>
     <!------ Font Awesome ------>
@@ -35,7 +34,7 @@
         <i class="fas fa-bars" id="ham-menu"></i>
         <ul id="nav-bar">
           <li>
-            <a style="color:gray" href="#home">Home </a>
+            <a href="#home">Home </a>
           </li>
           <li>
             <a href="https://frosty.tk/discord"> Discord </a>
@@ -61,52 +60,9 @@
       <div class="hero-img">
         <img src="https://media.discordapp.net/attachments/898223879040958494/928677404786966579/1641484331854.png" />
       </div>
-<div height="100px">
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="150" marginwidth="15">Loading…</iframe>
-</div>
     </section>
- <center>   <script type="text/javascript">
-	atOptions = {
-		'key' : '63d2d6dc8516c0692b599589bae80ab6',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplaycontent.com/63d2d6dc8516c0692b599589bae80ab6/invoke.js"></scr' + 'ipt>');
-</script>
-           <script type="text/javascript">
-	atOptions = {
-		'key' : '11b7defd2de6a2fb1099646724c39b16',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplaycontent.com/11b7defd2de6a2fb1099646724c39b16/invoke.js"></scr' + 'ipt>');
-</script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : 'f4b436c71533e57138e2dc210493627e',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-	document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivedisplaycontent.com/f4b436c71533e57138e2dc210493627e/invoke.js"></scr' + 'ipt>');
-</script>
-
-
-
-
-
-
-
-
-
-
-<center>
-
+    
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdOiwEURwsMlBGtrBrFGptGx9yn3K3Z_4zaZ5dK3slGLyGNXQ/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="100" marginwidth="15">Loading…</iframe>
 
     <!------ Footer ------>
     <footer>
