--- a/404.html
+++ b/404.html
@@ -81,6 +81,7 @@ body{
     	<div class="fof">
         		<h1>Error 404</h1>
  <P>Page not found</P>
+<p> page will be added soon</p>
     	</div>
 </div>
     <!------ Footer ------>
