--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
   	<script data-ad-client="ca-pub-2438376395642394" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+ <meta property="og:type" content="website">
+      <meta property="og:site_name" content="Frosty">
+      <meta property="og:title" content="Frosty - Home">
+      <meta property="og:description" content="Frosty smp, also written as Frosty, is a whitelisted minecraft server started in August 2021">
+      <meta property="og:image" content="https://media.discordapp.net/attachments/898223879040958494/932604224775278602/Untitled63-1.jpg">
+      <meta name="twitter:card" content="summary_large_image">
+      <meta name="twitter:site" content="@frosty">
+      <meta name="twitter:creator" content="@frosty">
     <title>Frosty - Home</title>
     <!------ Font Awesome ------>
     <link
