--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <head>
 
+<meta http-equiv="refresh" content="7; url=https://frosty.tk/home.html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Frosty - Players</title>
