--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <head>
 
-<meta http-equiv="refresh" content="4; url=https://frosty.tk/home.html">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Frosty - Players</title>
@@ -121,33 +121,7 @@ body{
 
         <i class="fas fa-bars" id="ham-menu"></i>
 
-        <ul id="nav-bar">
-
-          <li>
-
-            <a style="color:gray" href="https://frosty.tk">Home </a>
-
-          </li>
-
-          <li>
-
-            <a style="color:gray" href="https://frosty.tk/discord"> Discord </a>
-
-          </li>
-
-          <li>
-
-            <a style="color:gray" href="https://frosty.tk/#links">Links </a>
-
-          </li>
-
-                  <li>
-
-            <a style="color:gray" href="https://frosty.tk/register">Register </a>
-
-          </li>
-
-        </ul>
+       
 
       </nav>
 
@@ -161,11 +135,10 @@ body{
 
     	<div class="fof">
 
-        		<h1>Frosty Smp BETA</h1>
+        		<h1>Web is Down</h1>
 
- <P>This Is Not Final Website</P>
 
-<p> We Are Still Work On It</p>
+<p>Technical Difficulties</p>
 
     	</div>
 
